[package]
name = "ff_derive"
version = "0.13.0"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
]
description = "Procedural macro library used to build custom prime field implementations"
documentation = "https://docs.rs/ff-derive/"
homepage = "https://github.com/zkcrypto/ff"
license = "MIT/Apache-2.0"
repository = "https://github.com/zkcrypto/ff"
edition = "2021"

[features]
# enabled when generating bitvec code utilizing the version of ff's bitvec
bits = []

[lib]
proc-macro = true

[dependencies]
addchain = {version="0.2", git="https://github.com/labormedia/addchain.git", default-features=false}
num-bigint = {version="0.3", default-features=false}
num-traits = { version = "0.2", default-features=false }
num-integer = "0.1"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
cfg-if = "1"

[badges]
maintenance = { status = "passively-maintained" }
